# processing_service_backup

./: .dockerignore  .gitignore  CMakeLists.txt  DEV_WORKFLOW.md  Dockerfile  Dockerfile.dev  config.jsonc  config.yaml  docker-compose.dev.yml  docker-compose.yml  drogon.config  main.cc
controllers/: HelloController.cc  HelloController.h
plugins/: AWSPlugin.cpp  AWSPlugin.h  KafkaConsumerPlugin.cpp  KafkaConsumerPlugin.h
processing/: MediaProcessor.cpp  MediaProcessor.h
s3/: s3Utils.h
schemas/: mediaProcessingSchema.avsc
test/: CMakeLists.txt
utils/: json_utils.h
